Fix z-index on footer

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -6,6 +6,7 @@
     bottom: 0;
     width: 100%;
     height: 48px;
+    z-index: 99;
     color: white;
     background-color: $primary-blue;
     display: flex;
